# MCP-Couchbase

./: .dockerignore  .env.example  .gitignore  APPLY.md  CHANGES.diff  CHANGES.md  Dockerfile  HANDOFF.md  LICENSE  README.md  REMOVE-server_py_changes.md  all-changes.patch  buckets.py  claude_desktop_config.example.json  claude_desktop_config.json  cluster.py  collections.py  couchbase-mcp-comparison.docx  couchbase-mcp-comparison_v2.docx  couchbase-mcp-gui.docx  data.py  docker-compose.yml  indexes.py  pyproject.toml  requirements.txt  scope_gate.py.diff  search_admin.py  security.py  server.py  server.py.diff  server_py_changes.md  shared.py  smithery.yaml  stats.py  xdcr.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
auth/: __init__.py  oidc.py  scope_gate.py  session.py
couchbase-sizing/couchbase-sizing/: SKILL.md
couchbase-sizing/couchbase-sizing-source/references/: capella.md  workload-shapes.md
couchbase-sizing/couchbase-sizing/references/: disk.md  network.md
gui/: README.md  gui_server.py
gui-capella/: README.md  gui_server.py
gui-capella/static/: index.html
gui/static/: index.html
handlers/: __init__.py  buckets.py  capella.py  cluster.py  collections.py  data.py  diagnostics.py  eight_x.py  encryption.py  eventing.py  extended.py  indexes.py  mcp_status.py  search_admin.py  security.py  shared.py  stats.py  synonyms.py  xdcr.py
skills/: INSTALL.md
skills/couchbase-app-integration/couchbase-app-integration/: SKILL.md
skills/couchbase-app-integration/couchbase-app-integration-source/references/: connection-management.md  performance-patterns.md  sdks.md
skills/couchbase-app-integration/couchbase-app-integration/references/: durability-and-consistency.md  error-handling.md  transactions-app-side.md  xdcr-app-aware.md
skills/couchbase-data-modeling/couchbase-data-modeling-source/: SKILL.md
skills/couchbase-data-modeling/couchbase-data-modeling-source/references/: access-patterns.md  anti-patterns.md  boundaries.md  time-series-and-ttl.md
skills/couchbase-data-modeling/couchbase-data-modeling/references/: document-shape.md  keys.md  migration-from-relational.md
skills/couchbase-mcp/couchbase-mcp-source/: SKILL.md
skills/couchbase-mcp/couchbase-mcp-source/references/: cluster-admin.md  tool-index.md
skills/couchbase-mcp/couchbase-mcp/couchbase-mcp/: SKILL.md
skills/couchbase-mcp/couchbase-mcp/couchbase-mcp/references/: couchbase-8x.md  tool-index.md  troubleshooting.md
skills/couchbase-mcp/couchbase-mcp/references/: data-plane.md  observability.md  safety.md  security-best-practices.md
skills/couchbase-migration-execution/compressed files/: couchbase-migration-execution.skill
skills/couchbase-migration-execution/couchbase-migration-execution/references/: dual-write-and-cdc.md  from-mongodb.md  from-other-sources.md  from-relational.md  strategies.md
skills/couchbase-sizing/couchbase-sizing-source/references/: memory.md  nodes.md
skills/couchbase-sizing/couchbase-sizing/references/: indexes.md
skills/couchbase-sqlpp-tuning/: SKILL.md
skills/couchbase-sqlpp-tuning/references/: cost-based-optimizer.md  diagnostic-workflow.md  explain-plan.md  index-design.md  joins-and-cbo.md  pagination.md  query-patterns.md
skills/couchbase_mcp/couchbase-mcp/: SKILL.md
skills/couchbase_mcp/couchbase-mcp-source/references/: capella-v4.md  operational-runbooks.md
skills/couchbase_mcp/couchbase-mcp/references/: diagnostics.md  security-best-practices.md
tests/: conftest.py  test_admin_request.py  test_diagnostics.py  test_eight_x.py  test_eventing.py  test_extended.py  test_index_hardening.py  test_phase5_phase7.py  test_safety.py  test_subdoc.py
